# COSMOS77-ex03

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: logging_config.json  providers.json  setup.json
docs/: ACCEPTANCE.md  PLAN.md  PRD.md  PRD_bidi.md  PRD_crew_design.md  PRD_extension_points.md  PRD_figure_generation.md  PRD_latex_template.md  PRD_llm_provider.md  PRD_pdf_qa.md  PRD_research_tool.md  PRD_skills.md  PRD_spec_sheet.md  TODO.md
docs/prompts/: 000_phase0_bootstrap.md  001_phase1_docs.md  002_phase2_shared.md  003_phase3_provider.md  004_phase4_agents.md  005_phase5_research.md  006_phase6_write.md  007_phase7_figures.md  008_phase8_latex.md  009_phase9_pdf.md  010_phase10_readme.md  011_phase11_qa.md  012_phase12_submit.md  013_course_name_fix.md
output/: spec_sheet.json
scripts/: build_pdf.sh  generate_cover_pdf.py  qa_pdf.py
src/cosmos77_ex03/: __init__.py  constants.py
src/cosmos77_ex03/cli/: __init__.py  main.py
src/cosmos77_ex03/crew/: __init__.py  agents.py  research_run.py  schemas.py  smoke.py  tasks_latex.py  tasks_research.py  tasks_write.py  tools.py  write_run.py
src/cosmos77_ex03/figures/: __init__.py  charts.py
src/cosmos77_ex03/latex/: __init__.py  assemble.py  bib.py  convert.py  document.py  qa.py
src/cosmos77_ex03/providers/: __init__.py  factory.py  registry.py
src/cosmos77_ex03/sdk/: __init__.py  sdk.py
src/cosmos77_ex03/shared/: __init__.py  config.py  gatekeeper.py  logging_setup.py  version.py
src/cosmos77_ex03/skills/: __init__.py
src/cosmos77_ex03/skills/latex-author/: SKILL.md
src/cosmos77_ex03/skills/researcher/: SKILL.md
src/cosmos77_ex03/skills/technical-writer/: SKILL.md
tests/unit/: test_constants.py
tests/unit/test_crew/: test_agents.py  test_research_run.py  test_smoke.py  test_tasks_latex.py  test_tasks_research.py  test_tasks_write.py  test_tools.py  test_write_run.py
tests/unit/test_figures/: test_charts.py  test_snippets.py
tests/unit/test_latex/: test_assemble.py  test_bib.py  test_convert.py  test_document.py  test_qa.py
tests/unit/test_providers/: test_factory.py  test_registry.py
tests/unit/test_scripts/: test_cover.py
tests/unit/test_sdk/: test_sdk.py
tests/unit/test_shared/: test_config.py  test_gatekeeper.py  test_logging_setup.py  test_version.py
tex/: diagram.tex  formula.tex  main.tex  preamble.tex  refs.bib  table.tex
tex/sections/: ch_01.tex  ch_02.tex  ch_03.tex  ch_04.tex  ch_05.tex  ch_06.tex  ch_07.tex  ch_08.tex  ch_09.tex  ch_10.tex  ch_11.tex  ch_12.tex
