[project]
name = "cosmos77-ex03"
version = "1.00"
description = "203.3763 HW3: a CrewAI multi-agent team that researches, writes, and compiles a ~15-page LaTeX article on AI Agents in Production (vibe-coded with Claude Code)."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
authors = [
    { name = "Abdallah Khaldi", email = "abdallahkh12@icloud.com" },
    { name = "Tasneem Natour", email = "Natortasneem@gmail.com" },
]
keywords = [
    "ai-agents",
    "crewai",
    "latex",
    "article-generation",
    "claude-code",
    "vibe-coding",
    "uoh-rl07",
]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "crewai[google-genai]>=1.9",
    "crewai-tools",
    "google-generativeai",
    "matplotlib>=3.8",
    "numpy",
    "python-dotenv>=1.0",
    "pydantic>=2.6",
    "rich>=13.7",
    "pyyaml",
]

[project.scripts]
cosmos77-article = "cosmos77_ex03.cli.main:main"

[project.urls]
Homepage = "https://github.com/AbdallahKhaldi/COSMOS77-ex03"
Repository = "https://github.com/AbdallahKhaldi/COSMOS77-ex03"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cosmos77_ex03"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["assets/", "logs/", "output/", "tex/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B008", "N802", "N806", "SIM300"]
"scripts/**/*.py" = ["N802"]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "src/cosmos77_ex03/cli/*",
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == \"__main__\":",
    "if TYPE_CHECKING:",
]
show_missing = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src/cosmos77_ex03 --cov-report=term-missing --cov-report=xml --strict-markers"
markers = [
    "live: hits the real Gemini API / network / lualatex — excluded from CI, run locally only",
    "integration: end-to-end test exercising multiple components together",
    "slow: long-running test (deselect with '-m \"not slow\"')",
]

# Dev tooling — single source of truth (PEP 735). `uv sync` installs this group
# by default; CI uses `uv sync --frozen`.
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "hypothesis>=6.100",
    "pre-commit>=3.7",
]
